fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -40,8 +40,5 @@ body {
 }
 
 .centers {
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    background-color: #b0e0e6;
+    margin: auto;
 }
